--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Welcome to Html and Javascript
+<html>
+  <head>
+    <title>
+      Welcome to HTML & Javascript
+    </title>
+  </head>
+  <body>
+    <h1>Welcome to HTML & Javascript</h1>
+  </body>
+</html>
+
